crates/biome_cli/tests/snapshots/main_cases_config_path/raises_an_error_for_no_configuration_file_found.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --config-path=config file.js
```

## `file.js`

```js
function name() { return "lorem" }
```

# Termination Message

```block
config configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Biome couldn't find a configuration in the directory config.
  


```
