crates/biome_cli/tests/snapshots/main_cases_config_path/raises_an_error_when_the_config_file_is_not_json.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --config-path=biome.yml src
```

## `biome.yml`

```yml
blah: foo
```

# Termination Message

```block
biome.yml configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Invalid configuration file. Expected JSON or JSONC file, but got biome.yml.
  


```
