crates/biome_cli/tests/snapshots/main_cases_config_path/set_config_path.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `config/biome.jsonc`

```jsonc

        {
          "organizeImports": {
            "enabled": true
          },
          "linter": {
            "enabled": false
          },
          "formatter": {
            "enabled": true,
          },
          "javascript": {
            "formatter": {
              "quoteStyle": "single"
            }
          }
        }
```

## `src/index.js`

```js
a['b']  =  42;
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
src/index.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - a['b']··=··42;
      1 │ + a['b']·=·42;
      2 │ + 
  

```

```block
Checked 1 file in <TIME>.
```

```block
No fixes needed.
```

```block
Found 1 error.
```
